--- a/account/templates/account/courses.html
+++ b/account/templates/account/courses.html
@@ -10,6 +10,29 @@
 		$(el).addClass("minicurso-radio-checked");
 		$(radio).prop("checked", true);
 	}
+
+	function validateMinicursos(){
+		var minicurso1 = $('input[name=minicurso-1]:checked').data('track');
+		var minicurso2 = $('input[name=minicurso-2]:checked').data('track');
+		console.log(minicurso1);
+		console.log(minicurso2);
+
+		if(minicurso1 != minicurso2){
+			if(minicurso1 == "none")
+				return confirm("Você selecionou nenhum minicurso na Terça-feira, você tem certeza disto?");
+			else if(minicurso2 == "none")
+				return confirm("Você selecionou nenhum minicurso na Quinta-feira, você tem certeza disto?");
+			else{
+				alert("Você deve selecionar minicursos de mesmo pacote nos dois dias.");
+				return false;
+			}
+		}else{
+			if(minicurso1 == "none"){
+				return confirm("Você não selecionou nenhum minicurso, tem certeza disto?");
+			}
+			return true;
+		}
+	}
 </script>
 	<div class="panel">
 		<h2>Minicursos</h2>
@@ -21,7 +44,8 @@
 					Sua vaga está garantida nos minicursos. Veja detalhes do minicurso que você se inscreveu abaixo.
 				</div>
 				<h3>Minicursos inscritos</h3>
-				{% for course in user_courses %}
+				{% for reg in user_courses %}
+				{% with reg.course as course %}
 				<div class="row">
 						<div class="small-4 columns">
 							<a href="{{ course.get_absolute_url }}">
@@ -44,6 +68,7 @@
 						</div>
 				</div>
 				<br><br>
+				{% endwith %}
 				{% endfor %}
 
 			{% else %}
@@ -52,7 +77,7 @@
 					Os minicursos escolhidos devem pertencer ao mesmo pacote.
 				</div>
 			{% endif %}
-			<form  action="{% url "account_course_register" %}" method="post">
+			<form  action="{% url "account_course_register" %}" method="post" onsubmit="return validateMinicursos()">
 			{% csrf_token %}
 			{% for slot in slots %}
 			{% with forloop.counter as slotid %}
@@ -77,7 +102,7 @@
 							<div class="coursetitle">
 								<a href="{{ course.get_absolute_url }}">Mais detalhes</a>
 							</div>
-							<input type="radio" class="minicurso-radio-button" name="minicurso-{{slotid}}" id="course{{ course.id }}" value="{{ course.id }}" />
+							<input type="radio" class="minicurso-radio-button" data-track="{{track.0.get_track_display}}" name="minicurso-{{slotid}}" id="course{{ course.id }}" value="{{ course.id }}" />
 						</li>
 						{% endfor %}
 						</ul>
@@ -92,7 +117,7 @@
 						<div class="coursetitle">
 							Nenhum
 						</div>
-						<input type="radio" class="minicurso-radio-button" name="minicurso-{{slotid}}" id="course-1{{slotid}}" value="-1" required/>
+						<input type="radio" class="minicurso-radio-button" data-track="none" name="minicurso-{{slotid}}" id="course-1{{slotid}}" value="-1" required/>
 					</div>
 				</li>
 				</ul>
