Exibe as vagas restantes no minicurso. O model CourseRegistration foi movido para evitar import circular.

--- a/account/templates/account/courses.html
+++ b/account/templates/account/courses.html
@@ -96,7 +96,7 @@
 								<div class="coursetitle">
 									{{ course.title }}
 									<br>
-									X vagas
+									{{ course.get_remaining_vacancies }} vagas
 								</div>
 							</div>
 							<div class="coursetitle">
