--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -535,10 +535,15 @@ img.image-center {
     cursor: pointer;
     background-color: #00aadd;
 }
-.minicurso-radio-checked{
-    background-color: #00aadd;
-}
 
 .minicurso-radio-button{
     opacity: 0;
+}
+
+.sem-vagas{
+    background-color: #bbb;
+}
+
+.minicurso-radio-checked{
+    background-color: #00aadd;
 }
