Melhora visualização das vagas: plural e vagas esgotadas

--- a/account/templates/account/courses.html
+++ b/account/templates/account/courses.html
@@ -113,7 +113,11 @@
 								<div class="coursetitle">
 									{{ course.title }}
 									<br>
-									{{ vagas }} vagas
+									{% if vagas > 0 %}
+										{{ vagas }} vaga{{ vagas|pluralize }}
+									{% else %}
+										Vagas Esgotadas
+									{% endif %}
 								</div>
 							</div>
 							<div class="coursetitle">
