Exibe no painel de administração o numero de inscritos no minicurso.

--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -31,7 +31,7 @@
                 <td class="track-{{course.track}}">{{course.get_track_display}}</td>
                 <td>{{course.place|default:"<span class=\"alert-box alert\">sem local</span>"}}</td>
                 <td>{{course.speaker|default:"<span class=\"alert-box alert\">sem palestrante</span>"}}</td>
-                <td>{{course.vacancies}}</td>
+                <td>{{course.get_number_of_subscribers}}/{{course.vacancies}}</td>
                 <td><a href="{% url "management_courses_edit" course.pk %}"><i class="fa fa-pencil-square-o fa-2x"></i></td>
               </tr>
             {% endfor %}
