Adiciona suporte para contabilizar presença
Cada registro de presença está necessariamente atrelado a um usuário
cadastrado no site. As presenças vão ser contabilizadas ou pelo ID do
usuário ou pelo número USP. Se a pessoa não tem número USP cadastrado,
um usuário com email aleatório (e todos os outros campos vazios) é
criado para servir de base para a presença. No fim da semcomp esse
usuário vai ser mais facilmente pesquisado como fonte da frequência.

--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -61,6 +61,11 @@
 						<i class="fa fa-fw fa-suitcase"></i> {% trans "Palestras empresariais" %}
 					</a>
 				</li>
+				<li {% if active_attendance %}class="active"{% endif %}>
+					<a href="{% url "management_attendance" %}">
+						<i class="fa fa-fw fa-list"></i> {% trans "Presença" %}
+					</a>
+				</li>
 				{% if user.is_admin %}
 				<li {% if active_config %}class="active"{% endif %}>
 					<a href="{% url "management_config" %}">
