Exibe somente usuários reais na administração
Também altera um pouco o layout da parte de usuários para ficar mais
consistente com o resto da área de administração

--- a/management/templates/management/users.html
+++ b/management/templates/management/users.html
@@ -3,103 +3,109 @@
 {% block user_content %}
 {% spaceless %}
 <div class="row">
-	<h1 class="blue-bg">Estatísticas</h1>
-	<table>
-		<tbody>
-			<tr>
-				<td>Total de inscritos</td>
-				<td>{{ total_inscritos }}</td>
-			</tr>
-			<tr>
-				<td>Total de participantes</td>
-				<td>{{ total_pagos }}</td>
-			</tr>
-			<tr>
-				<td>Participantes COM Coffee Break</td>
-				<td>{{ total_coffee }}</td>
-			</tr>
-			<tr>
-				<td>Participantes SEM Coffee Break</td>
-				<td>{{ total_sem_coffee }}</td>
-			</tr>
-			<tr>
-				<td>Pendentes de avaliação</td>
-				<td>{{ total_pendentes }}</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-<div class="row">
-	<h1 class="blue-bg">Pendentes de avaliação</h1>
-	<div class="small-12 columns">
-		<table>
-			<thead>
-				<tr>
-					<td>Nome</td>
-					<td>Email</td>
-					<td>Pagamento</td>
-					<td>Informações</td>
-					<td>Inscrição</td>
-				</tr>
-			</thead>
-			<tbody>
-				{% for user in pendencias %}
+	<div class="large-6 columns">
+		<h1 class="blue-bg">Estatísticas</h1>
+		<div class="management-table-scroll">
+			<table>
+				<tbody>
 					<tr>
-						<td>{{ user.full_name }}</td>
-						<td>{{ user.email }}</td>
-						<td>
-						{% if user.inscricao.pagamento %}
-						OK
-						{% elif user.inscricao.comprovante and not user.inscricao.avaliado %}
-						Pendente
-						{% else %}
-						Não
-						{% endif %}
-						</td>
-						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
-						<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
+						<td>Total de inscritos</td>
+						<td>{{ total_inscritos }}</td>
 					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
+					<tr>
+						<td>Total de participantes</td>
+						<td>{{ total_pagos }}</td>
+					</tr>
+					<tr>
+						<td>Participantes COM Coffee Break</td>
+						<td>{{ total_coffee }}</td>
+					</tr>
+					<tr>
+						<td>Participantes SEM Coffee Break</td>
+						<td>{{ total_sem_coffee }}</td>
+					</tr>
+					<tr>
+						<td>Pendentes de avaliação</td>
+						<td>{{ total_pendentes }}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
 <div class="row">
-	<h1 class="blue-bg">Usuários</h1>
 	<div class="small-12 columns">
-		<table>
-			<thead>
-				<tr>
-					<td>Nome</td>
-					<td>Email</td>
-					<td>Pagamento</td>
-					<td>Informações</td>
-					<td>Inscrição</td>
-				</tr>
-			</thead>
-			<tbody>
-				{% for user in usuarios %}
+		<h1 class="blue-bg">Pendentes de avaliação</h1>
+		<div class="management-table-scroll">
+			<table>
+				<thead>
 					<tr>
-						<td>{{ user.full_name }}</td>
-						<td>{{ user.email }}</td>
-						<td>
-						{% if user.inscricao.pagamento %}
-						OK
-						{% elif user.inscricao.comprovante and not user.inscricao.avaliado %}
-						Pendente
-						{% else %}
-						Não
-						{% endif %}
-						</td>
-						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
-						<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
+						<td>Nome</td>
+						<td>Email</td>
+						<td>Pagamento</td>
+						<td>Informações</td>
+						<td>Inscrição</td>
 					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-		<div class="panel">
-			<a href="{% url "management_users_download" %}"><i class="fa fa-file-excel-o"></i> Baixar Lista de usuários (.csv)</a>
+				</thead>
+				<tbody>
+					{% for user in pendencias %}
+						<tr>
+							<td>{{ user.full_name }}</td>
+							<td>{{ user.email }}</td>
+							<td>
+							{% if user.inscricao.pagamento %}
+							OK
+							{% elif user.inscricao.comprovante and not user.inscricao.avaliado %}
+							Pendente
+							{% else %}
+							Não
+							{% endif %}
+							</td>
+							<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
+							<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="small-12 columns">
+	<h1 class="blue-bg">Usuários</h1>
+		<div class="management-table-scroll">
+			<table>
+				<thead>
+					<tr>
+						<td>Nome</td>
+						<td>Email</td>
+						<td>Pagamento</td>
+						<td>Informações</td>
+						<td>Inscrição</td>
+					</tr>
+				</thead>
+				<tbody>
+					{% for user in usuarios %}
+						<tr>
+							<td>{{ user.full_name }}</td>
+							<td>{{ user.email }}</td>
+							<td>
+							{% if user.inscricao.pagamento %}
+							OK
+							{% elif user.inscricao.comprovante and not user.inscricao.avaliado %}
+							Pendente
+							{% else %}
+							Não
+							{% endif %}
+							</td>
+							<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
+							<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+		<a class="button expand" href="{% url "management_users_download" %}"><i class="fa fa-file-excel-o"></i> Baixar Lista de usuários (.csv)</a>
 	</div>
 </div>
 {% endspaceless %}
