Manda mensagem de sucesso para a tela seguinte.

--- a/management/templates/management/courses_change.html
+++ b/management/templates/management/courses_change.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 
 {% block user_content %}
+{% for message in messages %}
+  <div class="alert-box {{message.tags}}">{{message}}</div>
+{% endfor %}
+
   <form
     method="post"
     enctype="multipart/form-data"
